# kdevelop

kdevplatform/: CMakeLists.txt
kdevplatform/language/: CMakeLists.txt  language-features.h.cmake
kdevplatform/language/codegen/: archivetemplateloader.cpp  archivetemplateloader.h  templateengine.cpp  templaterenderer.cpp
kdevplatform/template/filters/: CMakeLists.txt
plugins/clang/codecompletion/: context.cpp
plugins/clang/tests/: test_codecompletion.cpp
